--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.poniperro</groupId>
-    <artifactId>stonarini-archetype</artifactId>
-    <version>1.2.1</version>
+    <artifactId>Jouad-archetype</artifactId>
+    <version>1.0</version>
     <packaging>maven-archetype</packaging>
 
     <build>
